# remote-touchpad

./: .gitignore  README.md  build.spec  requirements.txt  server.py  start.sh  开发计划.md
.github/workflows/: release.yml
frontend/: app.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  input.rs  lib.rs  main.rs  protocol.rs  server.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/ui/: index.html
