[package]
name = "remote-touchpad"
version = "0.1.0"
edition = "2021"

[lib]
name = "remote_touchpad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
axum = { version = "0.8", features = ["ws"] }
qrcode = "0.14"
local-ip-address = "0.6"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
